# VigiaOS

./: .gitignore  AUDIT.md  AUTHOR.md  DEVELOPMENT.md  LICENSE  README.md  bootstrap.sh  cosign.pub  install.sh
tools/activity-log/: Cargo.toml  README.md
tools/activity-log-gui/: README.md  pyproject.toml
tools/activity-log-gui/data/: br.com.vigia.ActivityLog.desktop
tools/activity-log-gui/src/vigia_log_gui/: __init__.py  __main__.py  app.py  backend.py  glossary.py  window.py
tools/activity-log-gui/src/vigia_log_gui/tabs/: __init__.py  _helpers.py  about.py  correlations.py  sources.py  status.py  timeline.py
tools/activity-log/src/: audit.rs  correlator.rs  event.rs  fail2ban.rs  journal.rs  live.rs  main.rs  narrator.rs  tui.rs
tools/activity-log/tests/fixtures/: sample-journal.json
tools/antivirus/: .gitignore  README.md  pyproject.toml
tools/antivirus/data/: br.com.vigia.Antivirus.desktop
tools/antivirus/src/vigia_antivirus/: __init__.py  __main__.py  app.py  backend.py  window.py
tools/antivirus/src/vigia_antivirus/tabs/: __init__.py  _helpers.py  about.py  database.py  scan.py  status.py
tools/capabilities-inspector/: README.md  pyproject.toml
tools/capabilities-inspector/data/: br.com.vigia.CapabilitiesInspector.desktop
tools/capabilities-inspector/src/vigia_caps/: __init__.py  __main__.py  app.py  backend.py  capabilities.py  window.py
tools/dashboard/: README.md  pyproject.toml
tools/dashboard/data/: br.com.vigia.Dashboard.desktop
tools/dashboard/src/vigia_dashboard/: __init__.py  __main__.py  alerts.py  app.py  backend.py  graphs.py  net_bandwidth.py  proc_inspect.py  window.py
tools/dashboard/src/vigia_dashboard/tabs/: __init__.py  (+7 more)
tools/deployments-manager/: README.md  pyproject.toml
tools/deployments-manager/data/: br.com.vigia.DeploymentsManager.desktop
tools/deployments-manager/src/vigia_deployments/: __init__.py  __main__.py  app.py  backend.py  state.py  window.py
tools/dns-manager/: README.md  pyproject.toml
tools/dns-manager/data/: br.com.vigia.DnsManager.desktop
tools/dns-manager/src/vigia_dns/: __init__.py  __main__.py  _resolvers_module.py  app.py  backend.py  dnscrypt_backend.py  dnscrypt_catalog.py  migration.py  resolvers.py  window.py
tools/file-integrity/: README.md  pyproject.toml
tools/file-integrity/data/: br.com.vigia.FileIntegrity.desktop
tools/file-integrity/src/vigia_integrity/: __init__.py  __main__.py  app.py  backend.py  hash_backend.py  window.py
tools/firewall-gui/: README.md  pyproject.toml
tools/firewall-gui/data/: br.com.vigia.FirewallGui.desktop
tools/firewall-gui/src/vigia_firewall/: __init__.py  __main__.py  app.py  backend.py  window.py
tools/firmware-analyzer/: README.md  pyproject.toml
tools/firmware-analyzer/data/: br.com.vigia.FirmwareAnalyzer.desktop
tools/firmware-analyzer/src/vigia_firmware/: __init__.py  __main__.py  app.py  backend.py  window.py
tools/hardening-checks/: README.md  pyproject.toml
tools/hardening-checks/data/: br.com.vigia.HardeningChecks.desktop
tools/hardening-checks/src/vigia_hardening/: __init__.py  __main__.py  app.py  backend.py  window.py
tools/hash-tools/: README.md  pyproject.toml
tools/hash-tools/data/: br.com.vigia.HashTools.desktop
tools/hash-tools/src/vigia_hash/: __init__.py  __main__.py  app.py  backend.py  window.py
tools/netmon-gui/: README.md  pyproject.toml
tools/netmon-gui/data/: br.com.vigia.NetMon.desktop
tools/netmon-gui/src/vigia_netmon/: __init__.py  __main__.py  app.py  backend.py  humanize.py  window.py
tools/network-scanner/: README.md  pyproject.toml
tools/network-scanner/data/: br.com.vigia.NetworkScanner.desktop
tools/network-scanner/src/vigia_netscan/: __init__.py  __main__.py  app.py  backend.py  profiles.py  window.py
tools/privacy-controls/: .gitignore  README.md  pyproject.toml
tools/privacy-controls/data/: br.com.vigia.PrivacyControls.desktop
tools/privacy-controls/src/vigia_privacy/: __init__.py  __main__.py  about.py  app.py  window.py
tools/reports/: README.md  pyproject.toml
tools/reports/data/: br.com.vigia.Reports.desktop
tools/reports/src/vigia_reports/: __init__.py  __main__.py  app.py  backend.py  charts.py  cli.py  compliance.py  config.py  renderer.py  scheduler.py  system_health.py  window.py
tools/rootkit-scanner/: README.md  pyproject.toml
tools/rootkit-scanner/data/: br.com.vigia.RootkitScanner.desktop
tools/rootkit-scanner/src/vigia_rootkit/: __init__.py  __main__.py  app.py  backend.py  window.py
tools/selinux-gui/: README.md  pyproject.toml
tools/selinux-gui/data/: br.com.vigia.SelinuxGui.desktop
tools/selinux-gui/src/vigia_selinux/: __init__.py  __main__.py  app.py  backend.py  descriptions.py  window.py
tools/tool-installer/: README.md  pyproject.toml
tools/tool-installer/data/: br.com.vigia.ToolInstaller.desktop
tools/tool-installer/src/vigia_installer/: __init__.py  __main__.py  app.py  backend.py  browser_extensions.py  catalog.py  window.py
tools/vigia-blue/: pyproject.toml
tools/vigia-blue/data/: br.com.vigia.Blue.desktop
tools/vigia-blue/data/yara-rules/: lgpd.yar  secrets.yar  starter.yar
tools/vigia-blue/src/vigia_blue/: __init__.py  __main__.py  registry.py
tools/vigia-common/: README.md  pyproject.toml
tools/vigia-common/src/vigia_common/: __init__.py  badges.py  events.py  helpers.py  markdown.py  notices.py  notifications.py  notifications_bell.py  notify.py  platform.py  posture.py  proc.py  scheduler.py  shell.py  state.py
tools/vigia-hub/: README.md  pyproject.toml
tools/vigia-hub/data/: br.com.vigia.Hub.desktop  br.com.vigia.OS.desktop
tools/vigia-hub/src/vigia_hub/: __init__.py  __main__.py  adapters.py  app.py  auth.py  backup.py  binpath.py  checkup.py  cli.py  idle.py  logging_setup.py  manuals.py  markdown.py  registry.py  reports_html.py  reports_view.py  scan.py  settings.py  status.py  theme.py  window.py
tools/vigia-red/: pyproject.toml
tools/vigia-red/data/: br.com.vigia.Red.desktop
tools/vigia-red/src/vigia_red/: __init__.py  __main__.py  consent.py  gate.py  handoff.py  registry.py  runner.py
(+365 files in other folders)
