[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vigia-log-gui"
version = "0.1.0"
description = "Frontend GTK4 do vigia-log (parser Rust de audit/journald/fail2ban) — parte do VigiaOS"
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "André Augusto Azarias de Souza" }]
keywords = ["audit", "journal", "fail2ban", "activity", "log", "vigia", "gnome", "gtk4"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: GTK",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security",
]
dependencies = ["vigia-common"]

[project.scripts]
vigia-log-gui = "vigia_log_gui.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
