[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vigia-dashboard"
version = "0.3.3"
description = "Dashboard de sistema em tempo real (CPU, RAM, disco, rede, processos)"
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "André Augusto Azarias de Souza" }]
keywords = ["dashboard", "system-monitor", "htop", "vigia", "gnome", "gtk4"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: GTK",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Monitoring",
]
dependencies = ["vigia-common"]

[project.scripts]
vigia-dashboard = "vigia_dashboard.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
