[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vigia-deployments"
version = "0.1.1"
description = "Gerenciador de deployments rpm-ostree com UI GTK4 — parte da Vigia Suite"
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "André Augusto Azarias de Souza" }]
keywords = ["rpm-ostree", "deployments", "snapshots", "silverblue", "vigia", "gtk4"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: GTK",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Operating System",
]
dependencies = ["vigia-common"]

[project.scripts]
vigia-deployments = "vigia_deployments.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
