[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vigia-hash-tools"
version = "0.1.1"
description = "Calculo e verificacao de hashes com UI GTK4 (hashdeep/coreutils)"
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "André Augusto Azarias de Souza" }]
keywords = ["hash", "hashdeep", "md5sum", "sha256sum", "vigia", "gnome", "gtk4"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: GTK",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security",
]
dependencies = []

[project.scripts]
vigia-hash = "vigia_hash.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
