[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vigia-network-scanner"
version = "0.1.0"
description = "GUI moderna para nmap — parte da Vigia Suite"
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "André Augusto Azarias de Souza" }]
keywords = ["nmap", "network", "scanner", "discovery", "vigia", "gnome", "gtk4"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: GTK",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security",
    "Topic :: System :: Networking",
]
dependencies = ["vigia-common"]

[project.scripts]
vigia-netscan = "vigia_netscan.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
