[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vigia-selinux"
version = "0.2.0"
description = "GUI moderno (GTK4 + libadwaita) para gerenciar SELinux — parte da Vigia Suite"
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "André Augusto Azarias de Souza" },
]
keywords = ["selinux", "security", "vigia", "gnome", "gtk4"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: GTK",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security",
]
dependencies = ["vigia-common"]

[project.scripts]
vigia-selinux = "vigia_selinux.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
