[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vigia-blue"
version = "0.0.25"
description = "VigiaBlue — Suíte defensiva (blue team / SOC) — ecossistema VigiaOS (esqueleto)"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "André Augusto Azarias de Souza" }]
dependencies = ["vigia-common", "vigia-installer"]

[project.scripts]
vigia-blue = "vigia_blue.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
