[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vigia-common"
version = "0.2.19"
description = "Helpers compartilhados entre as ferramentas do VigiaOS"
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "André Augusto Azarias de Souza" }]
keywords = ["vigia", "gnome", "gtk4", "helpers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
