[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vigia-hub"
version = "0.7.3"
description = "Launcher mestre do VigiaOS — abre todos os modulos a partir de uma interface central"
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "André Augusto Azarias de Souza" },
]
keywords = ["vigia", "launcher", "security", "gnome", "gtk4"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: GTK",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = ["vigia-common"]

[project.optional-dependencies]
# Markdown rendering pra aba Ajuda (manuais tecnicos/leigos)
# Se nao instalado, cai pra fallback de texto raw
manuals = ["markdown>=3.4"]

[project.scripts]
vigia-hub = "vigia_hub.__main__:main"
vigia-hub-tray = "vigia_hub.tray.indicator:main"
vigia = "vigia_hub.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
