[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vigia-hub"
version = "0.12.2"
description = "VigiaOS — app unificado (Início + Hub + Red + Blue + Relatórios numa janela só)"
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "André Augusto Azarias de Souza" },
]
keywords = ["vigia", "launcher", "security", "gnome", "gtk4"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: GTK",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
]
# markdown: render rico (colorido) dos manuais na aba Ajuda via WebKit.
# Puro-Python e pequeno; se faltar, o app cai num fallback Pango FORMATADO
# (titulos/negrito/listas), nunca mais markdown cru.
dependencies = ["vigia-common", "markdown>=3.4"]

[project.scripts]
vigia-os = "vigia_hub.__main__:main"
vigia-hub = "vigia_hub.__main__:main"
vigia-os-tray = "vigia_hub.tray.indicator:main"
vigia-hub-tray = "vigia_hub.tray.indicator:main"
vigia = "vigia_hub.cli:main"
vigia-scan = "vigia_hub.scan:main"

[tool.setuptools.packages.find]
where = ["src"]
